# daxops

./: .gitignore  .pre-commit-hooks.yaml  LICENSE  README.md  azure-pipelines-daxops.yml  pyproject.toml
.github/workflows/: daxops-ci.yml
samples/contoso-sales/: relationships.tmdl
samples/contoso-sales/tables/: Sales.tmdl  Store.tmdl  factOrders.tmdl
src/daxops/: __init__.py  __main__.py  badge.py  baseline.py  bpa.py  cli.py  compare.py  config.py  fix.py  progress.py  register.py  ssas.py  testing.py  watch.py  xmla.py
src/daxops/app/: __init__.py  backup.py  main.py  state.py
src/daxops/diff/: __init__.py  semantic.py
src/daxops/document/: __init__.py  generator.py  keystore.py  writer.py
src/daxops/health/: rules.py
src/daxops/models/: schema.py
src/daxops/parser/: tmdl.py
src/daxops/report/: html.py  markdown.py
src/daxops/scoring/: __init__.py  bronze.py  gold.py  silver.py
tests/: test_app.py  test_app_document.py  test_app_fix.py  test_azure_pipeline.py  test_badge.py  test_baseline.py  test_bpa.py  test_cli.py  test_compare.py  test_config.py  test_fix.py  test_health.py  test_info.py  test_parser.py  test_parser_complex.py  test_pbip.py  test_progress.py  test_real_models.py  test_recommendations.py  test_register.py  test_scoring.py  test_ssas.py  test_testing.py  test_vscode_extension.py  test_watch.py  test_xmla.py
tests/fixtures/: bpa-rules.json  reference-data.json  test-cases.yaml
tests/fixtures/cnh-sales/: expressions.tmdl  model.tmdl  (+1 more)
vscode-daxops/: README.md  package.json
vscode-daxops/src/: extension.ts
(+41 files in other folders)
