[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daxops"
version = "0.1.0"
description = "Power BI / Microsoft Fabric semantic model lifecycle tool"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "DaxOps Contributors" }]
keywords = ["power-bi", "fabric", "tmdl", "dax", "semantic-model"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "jinja2>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = ["openai>=1.0"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
daxops = "daxops.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/daxops"]
